# ardata

./: .gitignore  README.md  pyproject.toml
ardata/edumetricar/apis/: api.py
ardata/handlers/: handler.py
edumetricar/getters/: getter.py
edumetricar/scraper/: scraper.py
notebooks/: scraper.ipynb
