[tool.poetry]
name = "edumetricar"
version = "0.0"
description = "Tablero de datos educativos de Argentina"
authors = ["Juan Ignacio Beiroa <jbeiroa@gmail.com>"]
license = "CC BY-NC 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
